# fde-support

./: .gitignore  README.md  go.mod  go.sum
.tools/: README.md
cmd/solution/: main.go  main_test.go
docs/: bug-hunt-round-01.md  bug-hunt-round-02.md  bug-hunt-round-03.md  bug-hunt-round-04.md  bug-hunt-round-05.md  bug-hunt-round-06.md  bug-hunt-round-07.md  bug-hunt-round-08.md  bug-hunt-round-09.md  bug-hunt-round-10.md  bug-hunt-round1-20260701.md  bug-hunt-summary-20260701-R2.md  bug-hunt-summary-20260701.md  development-plan.md  prompt-for-ai-fix-round6.md  prompt-for-ai-fix-round7.md  prompt-for-ai.md  solution-as-code-fde-platform-design.md  solution-as-code-fde-platform-technical-architecture.md  solution-as-code-userstory.md  user-manual.md  world2agent-introduce.md
docs/reviews/: 2026-06-30-design-implementation-review.md  2026-06-30-round4-design-implementation-review.md  2026-06-30-round5-design-implementation-review.md
docs/specs/: attachment-1-knowledge-unit-jsonl.md  attachment-2-component-specs.md  attachment-3-trace-json-schema.md  attachment-4-golden-case-jsonl.md  attachment-5-type-compatibility.md
examples/after-sales-support/: manifest.yaml  w2a-ticket-created.json
examples/guoran-support/: manifest.yaml  w2a-ticket-created.json
internal/api/: runtime_view.go  server.go  server_test.go  signal_router.go  signal_router_test.go  static_test.go  (+1 more)
templates/: alert-escalation.yaml  customer-support.yaml  data-inquiry.yaml
web/: app.css  app.js  console-shell.html  index.html
workers/knowledge/: parser.py  pyproject.toml
(+68 files in other folders)
