[project]
name = "fde-knowledge-worker"
version = "0.1.0"
description = "FDE Knowledge Ingestion Python Worker"
requires-python = ">=3.10"
dependencies = [
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "markdown-it-py>=3.0",
    "openpyxl>=3.1",
]

[project.scripts]
fde-knowledge = "parser:main"
